--- a/src/static/sass/default/app.scss
+++ b/src/static/sass/default/app.scss
@@ -1,7 +1,6 @@
-//@import "compass/css3";
+@import "_variables.scss";
 @import "_bootstrap-overrides.scss";
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
-@import "_variables.scss";
 @import "_home.scss";
-@import "_searchkit.scss";
-@import "_player.scss";
+@import "_component-library.scss";
+@import "_media-players.scss";
