--- a/src/static/css/default/main.css
+++ b/src/static/css/default/main.css
@@ -8837,7 +8837,8 @@ h4, h5, h6 {
   height: 100%;
 }
 
-/* line 48, ../../sass/default/_home.scss */
+/* ======================== Home page layout components ======================== */
+/* line 51, ../../sass/default/_home.scss */
 .labs-well {
   background-color: white;
   border: 2px solid #009fda;
@@ -8845,24 +8846,24 @@ h4, h5, h6 {
   min-height: 170px;
   text-style: justify;
 }
-/* line 54, ../../sass/default/_home.scss */
+/* line 57, ../../sass/default/_home.scss */
 .labs-well h3 {
   font-family: 'Nothing You Could Do', cursive;
 }
-/* line 57, ../../sass/default/_home.scss */
+/* line 60, ../../sass/default/_home.scss */
 .labs-well.labs-goto {
   cursor: pointer;
   border: 2px solid #e00034;
 }
-/* line 60, ../../sass/default/_home.scss */
+/* line 63, ../../sass/default/_home.scss */
 .labs-well.labs-goto:hover {
   border-color: black;
 }
-/* line 61, ../../sass/default/_home.scss */
+/* line 64, ../../sass/default/_home.scss */
 .labs-well.labs-goto:hover h3 {
   color: #e00034;
 }
-/* line 67, ../../sass/default/_home.scss */
+/* line 70, ../../sass/default/_home.scss */
 .labs-well img {
   max-width: 100%;
   border: 10px solid #fff;
@@ -8870,12 +8871,7 @@ h4, h5, h6 {
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16);
 }
 
-/* line 75, ../../sass/default/_home.scss */
-.interactive {
-  cursor: pointer;
-}
-
-/* line 79, ../../sass/default/_home.scss */
+/* line 78, ../../sass/default/_home.scss */
 .card {
   padding: 0;
   height: 380px;
@@ -8883,7 +8879,7 @@ h4, h5, h6 {
   background-color: #f5f5f5;
   border-radius: 2px;
 }
-/* line 85, ../../sass/default/_home.scss */
+/* line 84, ../../sass/default/_home.scss */
 .card img {
   display: block;
   width: 328px;
@@ -8891,19 +8887,30 @@ h4, h5, h6 {
   margin: auto;
   max-width: 100%;
 }
-/* line 92, ../../sass/default/_home.scss */
+/* line 91, ../../sass/default/_home.scss */
 .card .caption {
   padding: 16px 16px 6px 16px;
 }
-/* line 95, ../../sass/default/_home.scss */
+/* line 94, ../../sass/default/_home.scss */
 .card:hover {
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16);
 }
 
-/* line 101, ../../sass/default/_home.scss */
+/* line 100, ../../sass/default/_home.scss */
 .cardimage img {
   max-width: 100%;
   border: 10px solid white;
   border-radius: 2px;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16);
+}
+
+/* ======================== Global basic states ======================== */
+/* line 110, ../../sass/default/_home.scss */
+.interactive {
+  cursor: pointer;
+}
+
+/* line 114, ../../sass/default/_home.scss */
+.hidden {
+  display: none;
 }
