--- a/src/static/sass/default/_component-library.scss
+++ b/src/static/sass/default/_component-library.scss
@@ -1,14 +1,19 @@
 /* ======================== Comparative Search / Facet Search (based on searchkit.co) ======================== */
 
-.hidden {
-	display:none;
+.sk-search-box {
+	border:1px solid $bgBlue;
+	.sk-search-box__text {
+		color:black;
+	}
 }
 
-.search-box {
-	padding: 0px;
-	border-radius: 4px;
-	border: 1px solid dodgerblue;
-	background-color: 'white';
+.sk-select {
+	margin-top:10px;
+}
+
+.sk-hits-stats__info {
+	color: $bgBlue;
+	margin-top:10px;
 }
 
 .sk-pagination-navigation.is-numbered {
@@ -18,26 +23,26 @@
 
 }
 
-.sk-layout__body {
-	min-width:0;
+.sk-item-list-option {
+
+	.sk-item-list-option__text {
+		margin-left:10px;
+	}
+
+	.sk-item-list-option__count {
+		color: #333;
+	}
 }
 
-.sk-search-box__text {
-	color:black !important;
-}
-
-.filter-option {
-	color: crimson;
-}
-
-.search-layout {
-	backgroundColor: white;
+.sk-layout__results {
+	box-shadow:none;
+	background-color:inherit;
 }
 
 .sk-hits__item {
 	margin: 5px;
 	padding: 10px;
-	border: 1px solid dodgerblue;
+	border: 1px solid $bgBlue;
 	border-radius: 4px;
 }
 
