--- a/src/templates/clariah/apis.html
+++ b/src/templates/clariah/apis.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>L A B O - APIs</title>
+	<title>CLARIAH Media Suite - APIs</title>
 	<link rel="stylesheet" href="/static/css/clariah/main.css">
 	<link href="/static/css/font-awesome.min.css" rel="stylesheet">
 </head>
