--- a/src/templates/clariah/recipe.html
+++ b/src/templates/clariah/recipe.html
@@ -1,5 +1,5 @@
 <head>
-	<title>L A B O - Recipe: {{recipe.id}}</title>
+	<title>CLARIAH Media Suite - Recipe: {{recipe.id}}</title>
 	<link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/searchkit/0.8.3/theme.css">
 	<link rel="stylesheet" href="/static/css/clariah/app.css">
 	<link href="/static/css/font-awesome.min.css" rel="stylesheet">
