--- a/src/templates/clariah/recipes.html
+++ b/src/templates/clariah/recipes.html
@@ -1,5 +1,5 @@
 <head>
-	<title>L A B O - Recipes</title>
+	<title>CLARIAH Media Suite - Recipes</title>
 	<link rel="stylesheet" href="/static/css/clariah/main.css">
 	<link href="/static/css/font-awesome.min.css" rel="stylesheet">
 </head>
