--- a/src/templates/clariah/components.html
+++ b/src/templates/clariah/components.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>L A B O - Components</title>
+    <title>CLARIAH Media Suite - Components</title>
     <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/searchkit/0.8.3/theme.css">
     <link rel="stylesheet" href="/static/css/clariah/components.css">
     <link href="/static/css/font-awesome.min.css" rel="stylesheet">
