--- a/src/templates/clariah/contact.html
+++ b/src/templates/clariah/contact.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-	<title>CLARIAH media suite - Contact</title>
+	<title>CLARIAH Media Suite - Contact</title>
 	<link rel="stylesheet" href="/static/css/clariah/main.css">
 </head>
 
