--- a/src/templates/clariah/index.html
+++ b/src/templates/clariah/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>CLARIAH media suite</title>
+	<title>CLARIAH Media Suite</title>
 	<link href="/static/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="/static/css/clariah/main.css">
 </head>
