humble start on a named query selector to start querying other sources than ES

--- a/src/templates/default/components.html
+++ b/src/templates/default/components.html
@@ -57,6 +57,7 @@
                                         <ul class="nav nav-list">
                                             <li><a href="#" onclick="showComponent('Collection analyser')">Collection analyser</a></li>
                                             <li><a href="#" onclick="showComponent('Collection selector')">Collection selector</a></li>
+                                            <li><a href="#" onclick="showComponent('Named query selector')">Named query selector</a></li>
                                         </ul>
                                     </div>
                                 </li>
