changed quite some stuff, but mostly added the namedQuerySelector and namedquerysearch

--- a/src/templates/clariah/components.html
+++ b/src/templates/clariah/components.html
@@ -57,6 +57,7 @@
                                         <ul class="nav nav-list">
                                             <li><a href="#" onclick="showComponent('Collection analyser')">Collection analyser</a></li>
                                             <li><a href="#" onclick="showComponent('Collection selector')">Collection selector</a></li>
+                                            <li><a href="#" onclick="showComponent('Named query selector')">Named query selector</a></li
                                         </ul>
                                     </div>
                                 </li>
@@ -69,6 +70,7 @@
                                     <div class="collapse in" id="menu_search">
                                         <ul class="nav nav-list">
                                             <li><a href="#" onclick="showComponent('Facet search')">Facet search</a></li>
+                                            <li><a href="#" onclick="showComponent('Named query search')">Named query search</a></li>
                                             <li><a href="#" onclick="showComponent('Comparative search')">Comparative search</a></li>
                                         </ul>
                                     </div>
