--- a/src/templates/default/components.html
+++ b/src/templates/default/components.html
@@ -70,6 +70,7 @@
                                     <div class="collapse in" id="menu_search">
                                         <ul class="nav nav-list">
                                             <li><a href="#" onclick="showComponent('Facet search')">Facet search</a></li>
+                                            <li><a href="#" onclick="showComponent('Named query search')">Named query search</a></li>
                                             <li><a href="#" onclick="showComponent('Comparative search')">Comparative search</a></li>
                                         </ul>
                                     </div>
@@ -132,7 +133,7 @@
             </div>
 
             <div class="col-sm-9 col-md-10 affix-content">
-                <div id="component_x" class="row">
+                <div id="component_x" class="row" style="padding-right: 20px;">
 
                 </div>
             </div>
