--- a/src/templates/components.html
+++ b/src/templates/components.html
@@ -154,10 +154,11 @@
 <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
 
 <!-- The component library -->
-<script src="/static/public/assets/benglabs.js"></script>
+<!--<script src="/static/node_modules/labo-components/dist/labo-components.js" type="text/javascript"></script>-->
+<script type="text/javascript" src="/static/dist-dev/labo-components.js"></script>
 
 <!-- The custom JS of this page, which utilizes the component library -->
-<script type="text/babel" src="/static/js/labo-components.js"></script>
+<script src="/static/js/component-page.js" type="text/babel"></script>
 
 <script type="text/javascript" src="/static/node_modules/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="/static/node_modules/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
